--- a/index.html
+++ b/index.html
@@ -198,13 +198,12 @@
                 data-bs-parent="#accordionFlushExample"
               >
                 <div class="accordion-body">
-                  Placeholder content for this accordion, which is intended to
-                  demonstrate the <code>.accordion-flush</code> class. This is
-                  the third item's accordion body. Nothing more exciting
-                  happening here in terms of content, but just filling up the
-                  space to make it look, at least at first glance, a bit more
-                  representative of how this would look in a real-world
-                  application.
+                  Aprender los diversos componentes de hardware, ensamblar
+                  equipos, instalar sistemas operativos y aplicaciones de
+                  diagnóstico a través de prácticas en un laboratorio
+                  informático. Además, se les introduce en conceptos básicos de
+                  redes, seguridad y tareas de soporte informático en algunas de
+                  las prácticas.
                 </div>
               </div>
             </div>
@@ -228,13 +227,12 @@
                 data-bs-parent="#accordionFlushExample"
               >
                 <div class="accordion-body">
-                  Placeholder content for this accordion, which is intended to
-                  demonstrate the <code>.accordion-flush</code> class. This is
-                  the third item's accordion body. Nothing more exciting
-                  happening here in terms of content, but just filling up the
-                  space to make it look, at least at first glance, a bit more
-                  representative of how this would look in a real-world
-                  application.
+                  Conceptos necesarios para afrontar los retos que plantea
+                  Internet y la evolución hacia la interconexión de personas,
+                  procesos, datos y objetos, que es el núcleo del Internet de
+                  las Cosas, así como también los procesos empresariales para
+                  implementar soluciones operativas en la economía
+                  transformadora de Internet de las Cosas.
                 </div>
               </div>
             </div>
@@ -242,8 +240,39 @@
         </section>
 
         <section class="pad-bt">
+          <p class="display-3 fw-bold navG" align="center">Herramientas</p>
+          <div class="d-flex flex-wrap">
+            <div class="p-1">
+              <div class="card" style="width: 10rem">
+                <img src="https://seeklogo.com/images/P/PHP-logo-0B2FDC4529-seeklogo.com.png" class="card-img-top" alt="..."/>
+                <div class="card-body">
+                  <p class="card-text" align="center">
+                    <div class="grafico"><strong class="barra" style="width: 60%;">60%</strong></div>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="p-1 border">Flex item</div>
+            <div class="p-1 border">Flex item</div>
+            <div class="p-1 border">Flex item</div>
+            <div class="p-1 border">Flex item</div>
+            <div class="p-1 border">Flex item</div>
+            <div class="p-1 border">Flex item</div>
+            <div class="p-1 border">Flex item</div>
+            <div class="p-1 border">Flex item</div>
+            <div class="p-1 border">Flex item</div>
+            <div class="p-1 border">Flex item</div>
+            <div class="p-1 border">Flex item</div>
+            <div class="p-1 border">Flex item</div>
+            <div class="p-1 border">Flex item</div>
+            <div class="p-1 border">Flex item</div>
+          </div>
+        </section>
+
+        <section class="pad-bt" id="proyectos">
           <div class="container p-3" aling="center">
             <div class="row justify-content-around" align="center">
+              <p class="display-3 fw-bold navG" align="center">Proyectos</p>
               <div class="col-sm-6 col-md-6 col-lg-4">
                 <div class="card" style="width: 18rem">
                   <img
