--- a/index.html
+++ b/index.html
@@ -8,22 +8,105 @@
   <title>Braquetes</title>
   <link rel="shortcut icon" href="./assets/img/logo_small_icon_only.png" type="image/x-icon" />
   <!-- LINK HOJA DE ESTILOS CSS -->
-  <link rel="stylesheet" href="./assets/css/styles.css" />
   <!-- LINK NORNMALIZE CSS / Compatibilidad de Elementos con la mayoria de los navegadores para mejore rendimiento -->
-  <link rel="stylesheet" href="/assets/css/normalize.css">
   <!-- LINKS DE BOOTSTRAP -->
+<!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <!-- CSS only -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
-  <!--  <link href="./assets/bootstrap/css/bootstrap.css" rel="stylesheet" /> -->
-</head>
+  <link rel="stylesheet" href="./assets/css/styles.css"/>
 
+<!--   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
+ --> <!-- <link href="./assets/bootstrap/css/bootstrap.css" rel="stylesheet" />
+</head>
+ -->
 <body>
   <!-- INICIO BARRA DE NAVEGACIÓN / AUTOR: VICWITHGG -->
-  
+  <nav class="navbar navbar-expand-lg bg-nav" aria-label=" offcanvas navbar">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">R B</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbarLight" aria-controls="offcanvasNavbarLight">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbarLight" aria-labelledby="offcanvasNavbarLightLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbarLightLabel">Offcanvas</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+          </ul>
+          <form class="d-flex mt-3" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </nav>
+  <nav class="navbar bg-light fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Offcanvas navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Dropdown
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </nav>
   <!-- FIN BARRA DE NAVEGACIÓN / AUTOR: VICWITHGG -->
 
   <!-- INICIO BARRA DE NAVEGACIÓN / AUTOR: BRAQUETES  -->
-  <div class="container-fluid">
+ <!--  <div class="container-fluid">
     <nav class="navbar navbar-expand-lg bg fixed-top">
       <h1 style="padding-left: 10px">
         <span class="mb-0 h1 navG">R</span>
@@ -60,15 +143,17 @@
         </ul>
       </div>
     </nav>
-  </div>
+  </div> -->
   <!-- FIN DE BARRA DE NAVEGACIÓN / AUTOR: BRAQUETES -->
 
-  <section class="pad-bt bg" id="home">
+  sa
+
+  <section class="pad-bt bg-navbar" id="#home">
     <div class="col-12">
       <h1 class="titulo"></h1>
       <div class="p-3 mb-4 rounded-3">
         <div class="row" align="center">
-          <div class="col-lg-8 col-sm-12 col-md-6">
+          <div class="col-lg-6 col-sm-12 col-md-6">
             <p class="navG fs-4">Hola, mi nombre es...</p>
             <p class="display-1 fw-bold navG">Rodolfo Braquetes</p>
             <p class="col-10 fs-1 navG">
@@ -83,7 +168,7 @@
               para dirigir un equipo de desarrollo.
             </p>
           </div>
-          <div class="col-lg-4 col-sm-12 col-md-6">
+          <div class="col-lg-6 col-sm-12 col-md-6">
             <br />
             <img src="./assets/img/foto.jpeg" alt="..." class="foto" width="70%" />
           </div>
@@ -308,12 +393,14 @@
       </section>
     </div>
   </div>
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>  
   <!-- SCRIPT BOOSTRAP -->
   <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-    crossorigin="anonymous"></script>
-  <!-- <script src="./assets/bootstrap/js/bootstrap.js"></script> -->
-</body>
+    crossorigin="anonymous"></script> -->
+<!--     <script src="./assets/bootstrap/js/bootstrap.js"></script> 
+ --></body>
 
 </html>
