--- a/landingPage.html
+++ b/landingPage.html
@@ -26,7 +26,7 @@
 <body>
   <!-- BARRA DE NAVEGACIÓN SUPERIOR / LATERAL -->
   <header class="  ">
-    <nav class="navbar navbar-expand-lg  bg-navbar mb-2  ">
+    <nav class="navbar navbar-expand-lg  bg-navbar   ">
       <div class="container-fluid">
         <h5 class="navbar-brand mx-auto " href="#">
           <img src="./assets/img/logo_small_icon_only.png" alt="" width="30" height="24"
@@ -77,7 +77,7 @@
   <!-- FIN DE BARRA DE NAVEGACIÓN. -->
 
   <!-- ENCABEZADO DE PORTAFOLIO. -->
-  <section class="boutMe bg-light py-5">
+  <section class="boutMe bg-header py-5">
     <div class="container-xxl text-center">
       <div class="row  align-items-center g-2  ">
         <div class=" col-sm-12  col-lg-12 col-xl-12 align-items-center   ">
@@ -94,12 +94,12 @@
                 <a class="btn btn-social btn-gl"><i class="fa fa-gitlab"></i></a>
               </div>
             </div>
-            <div class="  align-items-center col-sm-12 col-md-12 col-xl-4 col-xxl-4 text-center  ">
+            <div class="  align-items-center  col-sm-12 col-lg-12 col-md-12 col-xl-4 col-xxl-4 text-center  ">
               <img src="/assets/img/3915d122-0b6f-4b36-95b7-4130c6e2ca5e.webp" alt="..."
-                class="img-fluid profilePic " />
+                class="img-fluid profilePic   col-xl-12 " />
             </div>
-            <div class="  col-sm-12 col-md-12 col-xl-6 ">
-              <!-- <h6 class="titleMute">¿Quién Soy?</h6>
+           <!-- <div class="  col-sm-12 col-md-12 col-xl-6 ">
+               <h6 class="titleMute">¿Quién Soy?</h6>
               <p class="text-sm ">
                 He desarrollado 2 aplicaciones en colaboración internacional
                 para empresas privadas, 1 proyecto nacional en un hackathon
@@ -107,8 +107,8 @@
                 proyectos personales para mi portafolio en GitHub. Soy una
                 persona que trabaja muy bien bajo presión y tengo habilidades
                 para dirigir un equipo de desarrollo.
-              </p> -->
-            </div>
+              </p> 
+            </div>-->
           </div>
         </div>
       </div>
