--- a/landingPage.html
+++ b/landingPage.html
@@ -23,7 +23,7 @@
     <header class=" fixed-top bg-navbar mb-2">
       <nav class="navbar navbar-expand-lg  ">
         <div class="container-fluid">
-            <h5 class="navbar-brand " href="#">
+            <h5 class="navbar-brand">
                 <img src="./assets/img/logo_small_icon_only.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
                 RB Portafolio
             </h5>
@@ -41,16 +41,16 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="#">Inicio </a>
+                    <a class="nav-link " aria-current="page" href="#home">Inicio </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Proyectos</a>
+                    <a class="nav-link" href="#proyectos">Proyectos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">CV</a>
+                    <a class="nav-link" href="#cv">CV</a>
                   </li>
                   <li class="nav-item">
-                    <aW class="nav-link" href="#">Contacto</aW>
+                    <aW class="nav-link" href="#contacto">Contacto</aW>
                   </li>
               </ul>
               
@@ -70,7 +70,7 @@
 
       <!-- ENCABEZADO DE PORTAFOLIO. -->
    
-   <section class="mt-5 " id="#home">
+   <section class="mt-5 " id="home">
           <div class="container-fluid pt-4 mb-4 rounded-3">
             <div class="row mt-4 px-6  justify-content-center align-items-center" >
               <div class="col-lg-8 col-sm-12 col-md-6  text-center p">
@@ -200,6 +200,134 @@
                     up the space to make it look, at least at first glance, a bit
                     more representative of how this would look in a real-world
                     application.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <section class="pad-bt">
+            <p class="display-3 fw-bold navG" align="center">Herramientas</p>
+            <div class="d-flex flex-wrap">
+              <div class="p-1 border">
+                <div class="card" style="max-width: 10rem">
+                  <img src="./assets/img/Angular-logo.png" class="card-img-top" alt="..." height="100%"/>
+                  <div class="card-body">
+                    <p class="card-text" align="center">
+                      <div class="grafico"><strong class="barra" style="width: 60%;">60%</strong></div>
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="p-1 border">
+                <div class="card" style="max-width: 10rem">
+                  <img src="./assets/img/PHP-logo.png" class="card-img-top" alt="..." height="100%"/>
+                  <div class="card-body">
+                    <p class="card-text" align="center">
+                      <div class="grafico"><strong class="barra" style="width: 60%;">60%</strong></div>
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="p-1">
+                <div class="card" style="width: 10rem">
+                  <img src="./assets/img/PHP-logo.png" class="card-img-top" alt="..."/>
+                  <div class="card-body">
+                    <p class="card-text" align="center">
+                      <div class="grafico"><strong class="barra" style="width: 60%;">60%</strong></div>
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="p-1">
+                <div class="card" style="width: 10rem">
+                  <img src="./assets/img/PHP-logo.png" class="card-img-top" alt="..."/>
+                  <div class="card-body">
+                    <p class="card-text" align="center">
+                      <div class="grafico"><strong class="barra" style="width: 60%;">60%</strong></div>
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="p-1">
+                <div class="card" style="width: 10rem">
+                  <img src="./assets/img/PHP-logo.png" class="card-img-top" alt="..."/>
+                  <div class="card-body">
+                    <p class="card-text" align="center">
+                      <div class="grafico"><strong class="barra" style="width: 60%;">60%</strong></div>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+  
+          <section class="pad-bt" id="proyectos">
+            <div class="container p-3" aling="center">
+              <div class="row justify-content-around" align="center">
+                <p class="display-3 fw-bold navG" align="center">Proyectos</p>
+                <div class="col-sm-6 col-md-6 col-lg-4">
+                  <div class="card" style="width: 18rem">
+                    <img
+                      src="./assets/img/logo_small_icon_only.png"
+                      class="card-img-top bg-dark"
+                      alt="..."
+                      style="max-height: 18rem"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">
+                        Some quick example text to build on the card title and
+                        make up the bulk of the card's content.
+                      </p>
+                      <!-- Button trigger modal -->
+                      <button
+                        type="button"
+                        class="btn btn-primary"
+                        data-bs-toggle="modal"
+                        data-bs-target="#exampleModal"
+                      >
+                        Launch demo modal
+                      </button>
+                    </div>
+                  </div>
+                  <br />
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-4">
+                  <div class="card" style="width: 18rem">
+                    <img
+                      src="./assets/img/logo_small_icon_only_inverted.png"
+                      class="card-img-top bg-dark"
+                      alt="..."
+                      style="max-height: 18rem"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">
+                        Some quick example text to build on the card title and
+                        make up the bulk of the card's content.
+                      </p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                  <br />
+                </div>
+                <div class="col-sm-6 col-md-6 col-lg-4">
+                  <div class="card" style="width: 18rem">
+                    <img
+                      src="./assets/img/logo_white_large.png"
+                      class="card-img-top bg-dark"
+                      alt="..."
+                      style="max-height: 18rem"
+                    />
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">
+                        Some quick example text to build on the card title and
+                        make up the bulk of the card's content.
+                      </p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
                   </div>
                 </div>
               </div>
