--- a/landingPage.html
+++ b/landingPage.html
@@ -522,7 +522,7 @@
     </div>
   </div>
 
-  <!-- BRAQUETES CODE 
+  <!-- BRAQUETES CODE -->
   <div class="container-fluid">
     <div class="container p-1">
       <section class="pad-bt t">
@@ -736,7 +736,7 @@
         </div>
       </section>
     </div>
-  </div>-->
+  </div>
 
   <!-- INICIO APARTADO DE FOOTER -->
   <footer class="footer mt-auto py-5  ">
