--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta http-equiv="refresh" content="0;url=http://127.0.0.1:5500/welcome.html" />
+ <meta http-equiv="refresh" content="0;url=welcome.html" />
 </head>
 <body>
 </body>
