--- a/welcome.html
+++ b/welcome.html
@@ -22,11 +22,11 @@
 
 <body class="d-flex vh-100 text-center bg-welcome">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto bg-dark bg-opacity-50 flex-column">
-        <header class="mb-auto header_welcome">
+        <header class="mb-auto text-welcome">
+            <p class="" >Braquetes Lopéz / <span>Software Development</span></p>
         </header>
         <main class="px-3 text-welcome">
-            <p>Braquetes Lopéz / <span>Software Development</span></p>
-            <h1 class="display-1">I did by <br><span>Myself</span></h1>
+            <h1 class="display-1">I did this all by <br><span>Myself</span></h1>
         </main>
         <footer class="mt-auto">
            <a href="homePortfolio.html" class="btn_gral btn_primary  ">Empezar</a>
