--- a/welcome.html
+++ b/welcome.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="h-100" lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -20,12 +20,12 @@
   <script src="https://kit.fontawesome.com/d2de2bc124.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="d-flex vh-100 text-center bg-welcome">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto bg-dark bg-opacity-50 flex-column">
+<body class="d-flex h-100 text-center bg-welcome">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto bg-dark bg-opacity-75 flex-column">
         <header class="mb-auto text-welcome">
             <p class="" >Braquetes Lopéz / <span>Software Development</span></p>
         </header>
-        <main class="px-3 text-welcome">
+        <main class="px-3  text-welcome">
             <h1 class="display-1">I did this all by <br><span>Myself</span></h1>
         </main>
         <footer class="mt-auto">
