SecciÂón de Estadisticas Dev

--- a/homePortfolio.html
+++ b/homePortfolio.html
@@ -148,6 +148,52 @@
             </div>
         </div>
     </main>
+    <!-- ESTADISTICAS PERFIL -->
+    <div class="container-fluid  my-auto py-4 px-auto d-flex w-100 h-75 text-bg-dark bg-dark ">
+        <div class="container  ">
+            <div class="row g-4 d-flex ">
+                <div class="col-sm-12 col-xl-4 col-xxl-4 p-4 my-auto ">
+                    <figure class="figure text-center">
+                        <figcaption class="figure-caption my-auto py-4">
+                            <div class="mb-auto">
+                                <i class="fa fa-duotone fa-earth-americas"></i>
+                            </div>
+                            <p class="px-auto my-2" >2 aplicaciones</p>
+                            <span class="px-auto my-2">Desarrolladas para empresas privadas a nivel internacional</span>
+                            <div class="mt-auto">
+                            </div>
+                        </figcaption>
+                    </figure>
+                </div>
+                <div class="col-sm-12 col-xl-4 col-xxl-4 py-4 my-auto">
+                    <figure class="figure text-center">
+                        <figcaption class="figure-caption my-auto py-4">
+                            <div class="mb-auto">
+                                <i class="fa fa-thin fa-ranking-star"></i>
+                            </div>
+                            <p class="px-auto my-2" >Proyecto Ganador</p>
+                            <span class="px-auto my-2">Desarrolladas para empresas privadas a nivel internacional</span>
+                            <div class="mt-auto">
+                            </div>
+                        </figcaption>
+                    </figure>
+                </div>
+                <div class="col-sm-12 col-xl-4 col-xxl-4 p-4 my-auto">
+                    <figure class="figure text-center">
+                        <figcaption class="figure-caption my-auto py-4">
+                            <div class="mb-auto">
+                                <i class="fa fa-light fa-briefcase"></i>
+                            </div>
+                            <p class="px-auto my-2 " >+ 10</p>
+                            <span class="px-auto my-2">Proyectos Personales <br> en GitHub</span>
+                            <div class="mt-auto">
+                            </div>
+                        </figcaption>
+                    </figure>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- CONTENEDOR PARA LAS CERTIFICACIONES -->
     <div class="container-fluid bg-light my-4 ">
         <div class="container">
@@ -441,7 +487,7 @@
             </div>
         </div>
     </div>
-    <footer class="mt-auto"></footer>
+    <footer class="mt-auto bg-w"></footer>
     <!-- LINK JS BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
