Correciones bg-welcome y mejora de Stats Developer

--- a/welcome.html
+++ b/welcome.html
@@ -20,8 +20,8 @@
   <script src="https://kit.fontawesome.com/d2de2bc124.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="d-flex h-100 text-center bg-welcome">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto bg-dark bg-opacity-75 flex-column">
+<body class="d-flex h-100 text-center bg-welcome ">
+    <div class="cover-container d-flex w-100 h-100 p-3 bg-dark bg-opacity-50 mx-auto 5 flex-column">
         <header class="mb-auto text-welcome">
             <p class="" >Braquetes Lopéz / <span>Software Development</span></p>
         </header>
