--- a/homePortfolio.html
+++ b/homePortfolio.html
@@ -409,8 +409,36 @@
                                     <p class="date-work">00 Enero 0000</p>
                                     <h5 class="display-5">Guía de Estilos Sistema de Venta de Boletos La Solteca
                                     </h5>
-                                    <a href="" class=" btn_link">Conocer Más</a>
+                                    <a href="" class=" btn_link" type="button" data-bs-toggle="offcanvas"  data-bs-target="#offcanvasResponsive" aria-controls="offcanvasBottom">Conocer Más</a>
+                                    <div class="offcanvas  offcanvas-end" tabindex="-1" id="offcanvasResponsive" aria-labelledby="offcanvasBottomLabel">
+                                        <div class="offcanvas-header">
+                                          <h5 class="offcanvas-title text-success mx-2" id="offcanvasBottomLabel">Guía de Estilos Sistema de Venta de Boletos La Solteca</h5>
+                                          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                                        </div>
+                                        <div class="offcanvas-body small text-black">
+                                                <img src="https://s3-alpha.figma.com/hub/file/1844227460/d78e9013-d968-4976-87d3-540f7607b913-cover.png" class="img-thumbnail" alt="">
+                                         <p class=" text-black my-2 text-uppercase">Objetivo Proyecto</p>
+                                         <p class=" text-black">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, delectus!</p>
+                                        <div class="lenguajes my-2 text-center">
+                                            <span class="badge rounded-pill mx-1 text-bg-warning">Html</span>
+                                            <span class="badge rounded-pill mx-1 text-bg-primary">CSS</span>
+                                            <span class="badge rounded-pill mx-1 text-bg-danger">Angular</span>
+                                            <span class="badge rounded-pill mx-1 text-bg-warning">JavaScript</span>
+                                        </div>
+                                        <div class="d-flex d-md-inline-block my-auto px-auto">
+                                            <a href="" class=" btn_social "> <i class="fa-brands fa-github"></i> </a>
+                                            <a href="" class=" btn_social "> <i class="fa-brands fa-linkedin"></i> </a>
+                                            <a href="" class=" btn_social "> <i class="fa-brands fa-facebook"></i></a>
+                                            <a href="" class=" btn_social "> <i class="fa-brands fa-instagram"></i> </a>
+                                        </div>
+                                         <p class=" text-black ">Link a Github</p>
+                                         <p class=" text-black  my-2">Link a Proyecto</p>
+                                         <p class=" text-black  my-2">Link Opcional</p>
+                                        </div>
+                                      </div>
                                 </div>
+
+
                         </div>
                     </div>
                 </div>
