--- a/welcome.html
+++ b/welcome.html
@@ -29,8 +29,8 @@
             <h1 class="display-1">I did this all by <br><span>Myself</span></h1>
         </main>
         <footer class="mt-auto">
-           <a href="homePortfolio.html" class="btn_gral btn_primary  ">Empezar</a>
-           <a href="" class="btn_gral btn_secondary">Mis Proyectos</a>
+           <a href="homePortfolio.html" class="btn_gral btn_primary  "><i class="fa fa-arrow-right"></i> Empezar</a>
+           <a href="" class="btn_gral btn_secondary"><i class="fa fa-github"></i> Mi GitHub</a>
         </footer>
     </div>
 
